Resolve the missing background color on nested submenus

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -21,6 +21,10 @@
 	position: relative;
 	margin: 0;
 	padding: $grid-unit-10;
+
+	.wp-block-navigation__container:empty {
+		display: none;
+	}
 }
 
 // Styles for submenu flyout
@@ -122,24 +126,24 @@
 }
 
 // Default / Light styles
-.wp-block-navigation .wp-block-navigation-link,
-.wp-block-navigation.is-style-light .wp-block-navigation-link {
+.wp-block-navigation .wp-block-navigation__container .wp-block-navigation-link,
+.wp-block-navigation.is-style-light .wp-block-navigation__container .wp-block-navigation-link {
 	&:not(.has-text-color) .wp-block-navigation-link__content {
 		color: $light-style-sub-menu-text-color;
 	}
 }
-.wp-block-navigation:not(.has-background) .wp-block-navigation__container,
-.wp-block-navigation.is-style-light:not(.has-background) .wp-block-navigation__container {
+.wp-block-navigation:not(.has-background) .wp-block-navigation__container .wp-block-navigation__container,
+.wp-block-navigation.is-style-light:not(.has-background) .wp-block-navigation__container .wp-block-navigation__container {
 	background-color: $light-style-sub-menu-background-color;
 }
 
 // Dark styles.
-.wp-block-navigation.is-style-dark .wp-block-navigation-link {
+.wp-block-navigation.is-style-dark .wp-block-navigation__container .wp-block-navigation-link {
 	&:not(.has-text-color) .wp-block-navigation-link__content {
 		color: $dark-style-sub-menu-text-color;
 	}
 }
-.wp-block-navigation.is-style-dark:not(.has-background) .wp-block-navigation__container {
+.wp-block-navigation.is-style-dark:not(.has-background) .wp-block-navigation__container .wp-block-navigation__container {
 	background-color: $dark-style-sub-menu-background-color;
 }
 
